--- a/app/views/votes/index.html.haml
+++ b/app/views/votes/index.html.haml
@@ -16,9 +16,7 @@
       %td= vote.parent_id
       %td= vote.prabowo_count
       %td= vote.jokowi_count
-      %td= link_to 'Show', vote
-      %td= link_to 'Edit', edit_vote_path(vote)
-      %td= link_to 'Destroy', vote, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td= link_to 'Detail', vote.detail_url
 
 %br
 
