Show sum of each candidate

--- a/app/views/votes/index.html.haml
+++ b/app/views/votes/index.html.haml
@@ -1,5 +1,12 @@
-%h1 Listing votes
-
+%h3 Summary
+%table
+  %tr
+    %th Total Prabowo
+    %th Total Jokowi
+  %tr
+    %td= @prabowo_sum
+    %td= @jokowi_sum
+%hr
 %table
   %tr
     %th Grand parent
