--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the Votes controller here.
+// Place all the styles related to the locations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.right-aligned {
+  text-align: right;
+}
