--- a/app/views/locations/_row_detail.html.haml
+++ b/app/views/locations/_row_detail.html.haml
@@ -1,10 +1,10 @@
-%td.right-aligned{"style" => yellow_background_for_max(location.sum_prabowo_count, location.sum_jokowi_count)}
+%td.right-aligned
   = location.sum_prabowo_count
-%td.right-aligned{"style" => yellow_background_for_max(location.sum_jokowi_count, location.sum_prabowo_count)}
-  = location.sum_jokowi_count
 %td.right-aligned{"style" => yellow_background_for_max(location.sum_prabowo_count, location.sum_jokowi_count)}
   = (location.sum_prabowo_count * 100 / ((location.sum_prabowo_count + location.sum_jokowi_count) * 1.0)).round(2)
   \%
+%td.right-aligned
+  = location.sum_jokowi_count
 %td.right-aligned{"style" => yellow_background_for_max(location.sum_jokowi_count, location.sum_prabowo_count)}
   = (location.sum_jokowi_count * 100 / ((location.sum_prabowo_count + location.sum_jokowi_count) * 1.0)).round(2)
   \%
@@ -17,3 +17,5 @@
   = location.fetched_count
   \/
   = location.total_count
+%td
+  = "(#{(location.fetched_count * 100/ (location.total_count * 1.0)).round(2)} %)"
