Change title to WIB

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -25,7 +25,7 @@
       %th %
       %th Jokowi
       %th %
-      %th Last updated
+      %th Last updated (WIB)
 
     - @locations.each_with_index do |location, index|
       %tr
@@ -43,7 +43,7 @@
       %th %
       %th Jokowi
       %th %
-      %th Last updated
+      %th Last updated (WIB)
 
     - @locations.each_with_index do |location, index|
       %tr
@@ -61,7 +61,7 @@
       %th %
       %th Jokowi
       %th %
-      %th Last updated
+      %th Last updated (WIB)
 
     - @locations.each_with_index do |location, index|
       %tr
