--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -33,8 +33,8 @@
     %th Jokowi
     %th
   %tr
-    %td= @prabowo_sum
-    %td= @jokowi_sum
+    %td= number_with_delimiter(@prabowo_sum, delimiter: ",")
+    %td= number_with_delimiter(@jokowi_sum, delimiter: ",")
     %td
       .addthis_sharing_toolbox
 
