--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -96,3 +96,12 @@
         = render :partial => 'locations/table_total'
 %div{"style" => "float:left"}
   .fb-comments{"data-colorscheme" => "light", "data-href" => "http://rekapda1.herokuapp.com", "data-numposts" => "5"}
+
+:javascript
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52889429-1', 'auto');
+  ga('send', 'pageview');
