--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title>Rekap DA1 Pilpres 2014</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <!--<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>-->
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <%= include_gon %>
 </head>
 <body>
 
