Add more description & make C1 grey

--- a/app/views/locations/_row_detail.html.haml
+++ b/app/views/locations/_row_detail.html.haml
@@ -1,12 +1,12 @@
 %td.right-aligned
   = number_with_delimiter(location.sum_prabowo_count, delimiter: ",")
-%td.right-aligned.c1_prabowo
+%td.grey.right-aligned.c1_prabowo
 %td.right-aligned{"style" => yellow_background_for_max(location.sum_prabowo_count, location.sum_jokowi_count)}
   = (location.sum_prabowo_count * 100 / ((location.sum_prabowo_count + location.sum_jokowi_count) * 1.0)).round(2)
   \%
 %td.right-aligned
   = number_with_delimiter(location.sum_jokowi_count, delimiter: ",")
-%td.right-aligned.c1_jokowi
+%td.grey.right-aligned.c1_jokowi
 %td.right-aligned{"style" => yellow_background_for_max(location.sum_jokowi_count, location.sum_prabowo_count)}
   = (location.sum_jokowi_count * 100 / ((location.sum_prabowo_count + location.sum_jokowi_count) * 1.0)).round(2)
   \%
