Add kaunis hijab logo

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -118,6 +118,9 @@
       %tr
         = render :partial => 'locations/table_total'
 %div{"style" => "float:left"}
+  %h4 Supported by
+  = link_to "https://kaunishijab.com/" do
+    = image_tag "kaunis.jpg"
   .fb-comments{"data-colorscheme" => "light", "data-href" => "http://rekapda1.herokuapp.com", "data-numposts" => "5"}
 
 :javascript
