--- a/app/views/locations/_row_detail.html.haml
+++ b/app/views/locations/_row_detail.html.haml
@@ -1,4 +1,11 @@
 %td.right-aligned
+  -if dc1
+    = number_with_delimiter(dc1.sum_prabowo_count, delimiter: ",")
+    %br
+    %span{"style" => yellow_background_for_max(dc1.sum_prabowo_count, dc1.sum_jokowi_count)}
+      = (dc1.sum_prabowo_count * 100 / ((dc1.sum_prabowo_count + dc1.sum_jokowi_count) * 1.0)).round(2)
+      \%
+%td.right-aligned
   -if db1
     = number_with_delimiter(db1.sum_prabowo_count, delimiter: ",")
     %br
@@ -12,6 +19,13 @@
     = (location.sum_prabowo_count * 100 / ((location.sum_prabowo_count + location.sum_jokowi_count) * 1.0)).round(2)
     \%
 %td.grey.right-aligned.c1_prabowo
+%td.right-aligned
+  -if dc1
+    = number_with_delimiter(dc1.sum_jokowi_count, delimiter: ",")
+    %br
+    %span{"style" => yellow_background_for_max(dc1.sum_jokowi_count, dc1.sum_prabowo_count)}
+      = (dc1.sum_jokowi_count * 100 / ((dc1.sum_prabowo_count + dc1.sum_jokowi_count) * 1.0)).round(2)
+      \%
 %td.right-aligned
   -if db1
     = number_with_delimiter(db1.sum_jokowi_count, delimiter: ",")
@@ -27,10 +41,12 @@
     \%
 %td.grey.right-aligned.c1_jokowi
 %td
-  - if location.max_last_fetched_at
-    = (location.max_last_fetched_at.in_time_zone("Jakarta").strftime("%d %b, %H:%M"))
-  - else
-    Pending..
+  -if dc1
+    = dc1.fetched_count
+    \/
+    = dc1.total_count
+    %br
+    = "#{(dc1.fetched_count * 100/ (dc1.total_count * 1.0)).round(2)} %"
 %td
   -if db1
     = db1.fetched_count
