--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -20,14 +20,14 @@
   = @kabupaten_nam
 %br
 %p
-  DA1 adalah hasil rekapitulasi suara per kecamatan yang merupakan hasil yang telah diplenokan pada tingkatannya.
-  DA1 berisi rekapitulasi beberapa formulir C1 pada tingkat kecamatan
-%p
-  DB1 adalah hasil rekapitulasi suara per kabupaten yang merupakan hasil yang telah diplenokan pada tingkatannya.
-  DB1 berisi rekapitulasi beberapa formulir DA1 pada tingkat kabupaten
+  DA1, DB1, DC1 adalah hasil rekapitulasi suara per kecamatan, kabupaten, provinsi respectively yang merupakan hasil yang telah diplenokan pada tingkatannya.
 %p
   Data ini diambil dari Website KPU berikut:
-  =link_to "http://pilpres2014.kpu.go.id/da1.php", "http://pilpres2014.kpu.go.id/da1.php"
+  =link_to "Data DA1 KPU", "http://pilpres2014.kpu.go.id/da1.php"
+  \,
+  =link_to "Data DB1 KPU", "http://pilpres2014.kpu.go.id/db1.php"
+  \,
+  =link_to "Data DC1 KPU", "http://pilpres2014.kpu.go.id/dc1.php"
   \. Data diupdate secara otomatis oleh program setiap 1 jam
   \. Untuk transparansi, source code program ini bisa didownload di
   =link_to "https://github.com/fikriauliya/rekapda1", "https://github.com/fikriauliya/rekapda1"
